--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.8",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
@@ -16,6 +18,7 @@
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-scroll": "^1.8.5",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
